@@ -1,5 +1,7 @@
 package client.nodes;
 
+import client.scenes.ManageParticipantsCtrl;
+import commons.Participant;
 import javafx.scene.Node;
 import javafx.scene.control.Button;
 import javafx.scene.control.TextField;
@@ -10,20 +12,27 @@ import javafx.scene.text.Text;
 public class AddedParticipant {
     HBox hbox;
     Text name;
+    Participant participant;
     Button rename;
     Button save;
     Button remove;
     Button edit;
+    ManageParticipantsCtrl manageParticipantsCtrl;
 
-    public AddedParticipant() {
-        name = new Text("Hello World!");
+    public AddedParticipant(Participant participant,
+                            ManageParticipantsCtrl manageParticipantsCtrl) {
+        this.participant = participant;
+        name = new Text(participant.getName());
 
         rename = new Button("rename");
         rename.setOnAction(e -> renameParticipant());
+
         remove = new Button("delete");
         remove.setOnAction(e -> removeParticipant());
+
         save = new Button("save");
         save.setOnAction(e -> saveParticipant());
+
         edit = new Button("edit");
         edit.setOnAction(e -> editParticipant());
 
@@ -32,6 +41,8 @@ public class AddedParticipant {
         hbox.getChildren().add(rename);
         hbox.getChildren().add(edit);
         hbox.getChildren().add(remove);
+
+        this.manageParticipantsCtrl = manageParticipantsCtrl;
     }
 
     public HBox getNode(){
@@ -41,12 +52,13 @@ public class AddedParticipant {
     private void removeParticipant() {
         VBox parent = (VBox) hbox.getParent();
         parent.getChildren().remove(hbox);
+        manageParticipantsCtrl.addRemovedParticipant(participant);
     }
 
     private void renameParticipant() {
         System.out.println("Renaming participant");
 
-        Node node = hbox.getChildren().remove(0);
+        Node node = hbox.getChildren().removeFirst();
         name = (Text) node;
         TextField field = new TextField(name.getText());
         hbox.getChildren().add(0, field);
@@ -58,16 +70,21 @@ public class AddedParticipant {
     private void saveParticipant() {
         System.out.println("Saving changes to participant");
 
-        Node node = hbox.getChildren().remove(0);
+        Node node = hbox.getChildren().removeFirst();
         TextField field = (TextField) node;
         name = new Text(field.getText());
         hbox.getChildren().add(0, name);
 
         hbox.getChildren().remove(1);
         hbox.getChildren().add(1, rename);
+
+        participant.setName(name.getText());
+        manageParticipantsCtrl.addEditedParticipant(participant);
     }
 
     private void editParticipant() {
-        // TODO: navigate to add/edit participant page
+        VBox parent = (VBox) hbox.getParent();
+        parent.getChildren().remove(hbox);
+        manageParticipantsCtrl.showEditParticipant(participant);
     }
 }
